# hqf-pdf-site

./: .gitignore  CLAUDE.md  PROPOSITIONS_HOME.md  README.md  conftest.py  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
api_keys/: admin.py  apps.py  models.py  server_config.py  test_server_config.py  tests.py
api_keys/management/commands/: write_pdf_server_config.py
api_keys/migrations/: 0001_initial.py
billing/: admin.py  close.py  models.py  periods.py  test_periods.py  tests.py  urls.py  views.py
billing/management/commands/: close_billing_month.py
billing/migrations/: 0001_initial.py
config/: context_processors.py  settings.py  urls.py
core/: admin.py
core/management/base/: custom_help_formatter_mixin.py  out_mixin.py
core/management/commands/: rewrap_comments.py
core/models/: __init__.py  base.py
core/utils/: rich_with_fallback.py
examples/: apps.py  catalog.py  tests.py  urls.py  views.py
install/: ci.toml  config_template.toml
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
scripts/: check_translations.py  inspect.sh
static/css/: site.css
static/examples/samples/: write_icc.icc
static/js/: theme.js
templates/: _language_picker.html  base.html  home.html
templates/accounts/: dashboard.html  login.html  signup.html
templates/billing/: subscribe.html
templates/examples/: catalog.html  rendered_samples.html
