[project]
name = "hqf-pdf-site"
version = "0.1.0"
description = "Sign-up and billing website for the hqf-pdf rendering service"
authors = [{ name = "Olivier Pons", email = "olivier.pons@gmail.com" }]
readme = "README.md"
# Upper bound is deliberate: 3.15 is a beta with no Django release supporting
# it. Raise it when a Django version announces 3.15 support.
requires-python = ">=3.14,<3.15"
dependencies = [
    "django (>=6.0.7,<6.1)",
    "psycopg[binary] (>=3.2,<4)",
    "django-crispy-forms (>=2.4,<3)",
    "crispy-bootstrap5 (>=2025.6,<2026)",
    "whitenoise (>=6.9,<7)",
]

[project.urls]
repository = "https://github.com/olivierpons/hqf-pdf-site"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1"
django-upgrade = "^1.28"
factory-boy = "^3.3"
isort = "^6.0"
pip-audit = "^2.9"
pycodestyle = "^2.13"
pylint = "^3.3"
pylint-django = "^2.6"
pytest-django = "^4.11"
ruff = "^0.14"

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["accounts", "api_keys", "billing", "config"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "DJ", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Django settings read config top-down and assign module-level names; the file
# is a script, not a module with a public API.
"config/settings.py" = ["E402"]
"*/migrations/*" = ["E501"]

[tool.pylint.main]
load-plugins = ["pylint_django"]
django-settings-module = "config.settings"
ignore-paths = ["^.*/migrations/.*$"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
# Black owns formatting; ruff already reports unused imports and undefined
# names. Docstring policy here is Google-style on the public surface, not a
# docstring on every module and function.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "wrong-import-position",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
